--- a/css/style.css
+++ b/css/style.css
@@ -4813,6 +4813,7 @@ h3 {
 }
 
 .roulette__previous-wrapper {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4858,6 +4859,20 @@ h3 {
   -o-object-fit: contain;
   object-fit: contain;
   stroke: #ababab;
+}
+
+.roulette__previous-sound {
+  position: absolute;
+  top: -18px;
+  right: 42px;
+  width: 24px;
+  height: 24px;
+  z-index: 1500;
+}
+
+.roulette__previous-sound svg {
+  width: 100%;
+  height: 100%;
 }
 
 .roulette__rull {
@@ -4970,20 +4985,6 @@ h3 {
   background: rgba(153, 153, 153, 0.8);
   -webkit-box-shadow: 0px 4px 38px rgba(196, 54, 78, 0.33);
   box-shadow: 0px 4px 38px rgba(196, 54, 78, 0.33);
-}
-
-.roulette__rull-sound {
-  position: absolute;
-  width: 24px;
-  height: 24px;
-  right: 40px;
-  bottom: -30px;
-  z-index: 1500;
-}
-
-.roulette__rull-sound svg {
-  width: 100%;
-  height: 100%;
 }
 
 .roulette__radio:checked + .roulette__item-header {
@@ -8410,6 +8411,11 @@ h3 {
     margin-right: 0px;
   }
 
+  .roulette__previous-sound {
+    top: -4px;
+    right: 0;
+  }
+
   .roulette__rull {
     -webkit-box-ordinal-group: 2;
     -ms-flex-order: 1;
@@ -8422,12 +8428,6 @@ h3 {
 
   .roulette__rull::after {
     width: 77px;
-  }
-
-  .roulette__rull-sound {
-    right: 0;
-    bottom: unset;
-    top: -18px;
   }
 
   .bonus-currency__title {
