--- a/css/style.css
+++ b/css/style.css
@@ -8375,6 +8375,8 @@ h3 {
     flex: 0 0 100%;
     max-width: 100%;
     margin-bottom: 20px;
+    border-right: 2px solid rgba(255, 255, 255, 0.03);
+    border-radius: 5px;
   }
 
   .roulette__table-input {
