--- a/css/style.css
+++ b/css/style.css
@@ -873,7 +873,7 @@ h3 {
 
 .num-game-currency__img-icon {
   position: absolute;
-  top: 14px;
+  top: 15px;
   left: 14px;
   width: 17px;
   height: 21px;
@@ -5211,8 +5211,9 @@ h3 {
   font-size: 0.875em;
   line-height: 100%;
   font-weight: 500;
+  padding-bottom: 0;
   margin-left: -2px;
-  margin-top: -5px;
+  margin-top: -2px;
 }
 
 .promo-code__form {
