--- a/css/style.css
+++ b/css/style.css
@@ -4429,8 +4429,8 @@ h3 {
 }
 
 .roulette__accardion-num svg {
-  width: 14px;
-  height: 14px;
+  width: 16px;
+  height: 18px;
 }
 
 .roulette__items {
@@ -9094,6 +9094,11 @@ h3 {
     font-size: 16px;
     line-height: 19px;
   }
+
+  .roulette__accardion-num svg {
+    width: 15px;
+    height: 17px;
+  }
 }
 
 @media (max-width: 411px) and (max-height: 799px) {
@@ -9124,6 +9129,11 @@ h3 {
     top: 17px;
     font-size: 15px;
     line-height: 18px;
+  }
+
+  .roulette__accardion-num svg {
+    width: 14px;
+    height: 16px;
   }
 }
 
