--- a/css/style.css
+++ b/css/style.css
@@ -417,9 +417,9 @@ body::-webkit-scrollbar-thumb {
 }
 
 .scrollbar-overflow {
-  -webkit-transition: 1s;
-  -o-transition: 1s;
-  transition: 1s;
+  /* -webkit-transition: 1s; */
+  /* -o-transition: 1s; */
+  /* transition: 1s; */
 }
 
 .overflow-h {
