--- a/css/style.css
+++ b/css/style.css
@@ -6530,7 +6530,7 @@ h3 {
 
   .header__wrapper_active {
     position: fixed;
-    top: 70px;
+    top: 76px;
     left: 0;
     width: 100%;
     max-width: 440px;
@@ -7644,7 +7644,6 @@ h3 {
   }
 
   .header__wrapper_active {
-    margin-top: 25px;
     padding-top: 17px;
     position: fixed;
     overflow: hidden;
@@ -8907,6 +8906,10 @@ h3 {
     left: 0px;
   }
 
+  .header__wrapper_active {
+    top: 63px;
+  }
+
   .honesty__title {
     text-align: center;
   }
@@ -8953,7 +8956,7 @@ h3 {
 
 @media (max-width: 411px) {
   .header__wrapper_active {
-    margin-top: 13px;
+    top: 57px;
   }
 
   .roulette__rull-wrapper {
@@ -9195,7 +9198,7 @@ h3 {
   }
 
   .header__balance {
-    top: 15px;
+    top: 21px;
   }
 
   .header__login-link {
